--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@reduxjs/toolkit": "^2.5.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +32,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.23.3"
