--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "pinata-web3": "^0.5.4",
