--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.474.0",
